# marten

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml
assets/: demo.tape
scripts/: test-repo.sh
src/: action.rs  app.rs  cli.rs  command_palette.rs  config.rs  diff_panel.rs  error.rs  event.rs  files_panel.rs  inline_diff.rs  main.rs  store.rs  syntax.rs  terminal.rs  theme.rs
src/git/: mod.rs  repository.rs
src/state/: diff.rs  files.rs  focus.rs  line_index.rs  mod.rs  overlay.rs  review.rs  screen.rs  tree.rs  view_mode.rs
src/tui/: layout.rs  mod.rs  theme.rs
src/tui/components/: branches_panel.rs  command_palette.rs  diff_panel.rs  files_panel.rs  history_panel.rs  left_sidebar.rs  mod.rs  modal.rs  panel.rs  right_sidebar.rs  shortcuts.rs  stash_panel.rs  theme_selector.rs  top_bar.rs
src/tui/screens/: home.rs
