[package]
name = "marten"
version = "0.1.0"
authors = ["Jones Dias"]
description = "A small Rust Git TUI for reviewing work without leaving the terminal."
keywords = ["tui", "terminal", "git"]
edition = "2024"

[dependencies]
crossterm = "0.29.0"
git2 = "0.20.4"
ratatui = "0.30.0"
syntect = "5.2.0"
