[package]
name = "marten"
version = "0.1.0"
authors = ["Jones Dias"]
description = "A small Rust Git TUI for reviewing work without leaving the terminal."
keywords = ["tui", "terminal", "git"]
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
git2 = "0.20.4"
ratatui = "0.30.0"
similar = { version = "3.1.1", features = ["unicode"] }
syntect = "5.2.0"

[dev-dependencies]
tempfile = "3.25.0"
